# bits-and-bytes

./: .gitignore  Makefile.am  README.md  Session.vim  configure.ac
C++/program/: Makefile
C/program/: Makefile
cpp/: constexpr_hash_string.hpp  move_elem_to.hpp  resolve_tilde.hpp  timer.hpp
cpp/enum_flag_operators/: enum_flag_operators.hpp
cpp/include/bits-and-bytes/: unreachable_error.hpp
cpp/statistics/: statistics.hpp
cpp/stream_append/: stream_append.hpp
cpp/timer/: timer.hpp
cpp/type_traits/: type_traits.hpp
include/bits-and-bytes/: Makefile.am  constexpr_hash_string.hpp  constexpr_min_max.hpp  enum_flag_operators.hpp  generic_callback.hpp  is_same_template.hpp  is_specialization_of.hpp  move_elem_to.hpp  overflow_arithmetic.hpp  resolve_tilde.hpp  statistics.hpp  stream_append.hpp  timer.hpp  unreachable_error.hpp
makefiles/: Makefile_c_library  Makefile_c_program  Makefile_cpp_library  Makefile_cpp_program
program/: Makefile
readme/: README_template.md
src/: Makefile.am  constexpr_min_max.hpp  generic_callback.hpp  random_num.hpp  resolve_tilde.hpp  statistics.hpp  timer.hpp
