AM_CXXFLAGS = -std=c++20
pkginclude_HEADERS =              \
	constexpr_hash_string.hpp \
	constexpr_min_max.hpp     \
	enum_flag_operators.hpp   \
	is_same_template.hpp      \
	is_specialization_of.hpp  \
	move_elem_to.hpp          \
	overflow_arithmetic.hpp   \
	resolve_tilde.hpp         \
	statistics.hpp            \
	stream_append.hpp         \
	timer.hpp                 \
	unreachable_error.hpp
